# wsl-claude-toast

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install-local.sh  install.sh
.github/workflows/: ci.yml  release.yml
assets/i18n/: de.json  en.json  es.json  fr.json  it.json
src/: main.rs
