[package]
name = "wsl-claude-toast"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sébastien HEYD <contact@sheyd.fr>"]
description = "Native Windows Toast notifications from WSL, designed for Claude Code hooks."
readme = "README.md"
repository = "https://github.com/sebastienheyd/wsl-claude-toast"
homepage = "https://github.com/sebastienheyd/wsl-claude-toast"
license = "MIT"
keywords = ["wsl", "windows", "toast", "notifications", "claude-code"]
categories = ["command-line-utilities", "os::windows-apis"]

[[bin]]
name = "wsl-claude-toast"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
